# cart

./: .gitignore  LICENSE  meson.build  meson_options.txt  readme.md
include/: alloc.h  calt.h  err.h  mem.h  meson.build
src/: meson.build
src/alloc/: alloc.c  calloc.c  free.c  malloc.c  memdup.c  meson.build  realloc.c
src/err/: errstr.c  meson.build  set_err.c
src/mem/: memccpy.c  memchr.c  memcmp.c  memcpy.c  memhash.c  memlen.c  memmem.c  memmove.c  memrchr.c  memrev.c  memset.c  memswap.c  memzero.c  meson.build
test/: meson.build
test/alloc/: memdup.c  meson.build
test/mem/: memccpy_nullnull.c  memchr.c  memchr_notfound.c  memcmp_diff.c  memcmp_prefix.c  memcmp_same.c  memcmp_samenull.c  memcmp_sing.c  memcpy_null_prefix.c  memcpy_null_same.c  memcpy_nullnull.c  memcpy_prefix.c  memcpy_same.c  memlen.c  memlen_overflow.c  memmove_null_backward.c  memmove_null_prefix.c  memmove_null_same.c  memmove_null_sing.c  memmove_nullnull.c  memmove_overlap.c  memmove_prefix.c  memmove_same.c  memmove_sing.c  memrchr.c  memrchr_notfound.c  memrev.c  memset.c  memset_null.c  memset_nullnull.c  memswap.c  memswap_null.c  memswap_same.c  memzero.c  memzero_null.c  memzero_nullnull.c  meson.build
