test('memset', executable('memset', 'memset.c',
  dependencies : calt
))

test('memset_null Non Null Pointer', executable('memset_null', 'memset_null.c',
  dependencies : calt
))

test('memset_null Null Pointer', executable('memset_nullnull', 'memset_nullnull.c',
  dependencies : calt
))

test('memzero', executable('memzero', 'memzero.c',
  dependencies : calt
))

test('memzero_null Non Null Pointer', executable('memzero_null', 'memzero_null.c',
  dependencies : calt
))

test('memzero_null Null Pointer', executable('memzero_nullnull', 'memzero_nullnull.c',
  dependencies : calt
))

test('memcmp Same', executable('memcmp_same', 'memcmp_same.c',
  dependencies : calt
))

test('memcmp Different',executable('memcmp_diff', 'memcmp_diff.c',
  dependencies : calt
))

test('memcmp Prefix',  executable('memcmp_prefix', 'memcmp_prefix.c',
  dependencies : calt
))

test('memcmp Same Non-Null',  executable('memcmp_sing', 'memcmp_sing.c',
  dependencies : calt
))

test('memcmp Same Null',  executable('memcmp_samenull', 'memcmp_samenull.c',
  dependencies : calt
))

test('memcpy Same', executable('memcpy_same', 'memcpy_same.c',
  dependencies : calt
))

test('memcpy Prefix',  executable('memcpy_prefix', 'memcpy_prefix.c',
  dependencies : calt
))

test('memcpy_null Same', executable('memcpy_null_same', 'memcpy_null_same.c',
  dependencies : calt
))

test('memcpy_null Prefix',  executable('memcpy_null_prefix', 'memcpy_null_prefix.c',
  dependencies : calt
))

test('memcpy_null Null Pointer', executable('memcpy_nullnull', 'memcpy_nullnull.c',
  dependencies : calt
))

test('memmove Same', executable('memmove_same', 'memmove_same.c',
  dependencies : calt
))

test('memmove Same Pointer', executable('memmove_sing', 'memmove_null_sing.c',
  dependencies : calt
))

test('memmove Prefix',  executable('memmove_prefix', 'memmove_prefix.c',
  dependencies : calt
))

test('memmove Overlap', executable('memmove_overlap', 'memmove_overlap.c',
  dependencies : calt
))

test('memmove Backward',  executable('memmove_backward', 'memmove_backward.c',
  dependencies : calt
))

test('memmove_null Same', executable('memmove_null_same', 'memmove_null_same.c',
  dependencies : calt
))

test('memmove_null Same Pointer', executable('memmove_null_sing', 'memmove_null_sing.c',
  dependencies : calt
))

test('memmove_null Prefix',  executable('memmove_null_prefix', 'memmove_null_prefix.c',
  dependencies : calt
))

test('memmove_null Overlap', executable('memmove_null_overlap', 'memmove_null_overlap.c',
  dependencies : calt
))

test('memmove_null Backward',  executable('memmove_null_backward', 'memmove_null_backward.c',
  dependencies : calt
))

test('memmove_null Null Pointer', executable('memmove_nullnull', 'memmove_nullnull.c',
  dependencies : calt
))

test('memccpy_null Null Pointer', executable('memccpy_nullnull', 'memccpy_nullnull.c',
  dependencies : calt
))

test('memrev', executable('memrev', 'memrev.c',
  dependencies : calt
))

test('memswap', executable('memswap', 'memswap.c',
  dependencies : calt
))

test('memswap Same', executable('memswap_same', 'memswap_same.c',
  dependencies : calt
))

test('memswap Null', executable('memswap_null', 'memswap_null.c',
  dependencies : calt
))

test('memlen', executable('memlen', 'memlen.c',
  dependencies : calt
))

test('memlen Overflow', executable('memlen_overflow', 'memlen_overflow.c',
  dependencies : calt
))

test('memchr Found', executable('memchr', 'memchr.c',
  dependencies : calt
))

test('memchr Not Found', executable('memchr_notfound', 'memchr_notfound.c',
  dependencies : calt
))

test('memrchr Found', executable('memrchr', 'memrchr.c',
  dependencies : calt
))

test('memrchr Not Found', executable('memrchr_notfound', 'memrchr_notfound.c',
  dependencies : calt
))

